Mise en place du design

--- a/esoternet_app/templates/base.html.twig
+++ b/esoternet_app/templates/base.html.twig
@@ -18,8 +18,8 @@
         <div class="hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
                 <li><a href="{{ path('home') }}">Accueil</a></li>
-                <li><a href="/shop">Produits</a></li>
-                <li><a href="/about">À propos</a></li>
+                <li><a href="/entity">Entitée</a></li>
+                <li><a href="/pacts">Pacte</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
