Mise en place d'un payment stripe et mise ne palce d'un petit design en attendant

--- a/esoternet_app/templates/pact/list.html.twig
+++ b/esoternet_app/templates/pact/list.html.twig
@@ -17,9 +17,8 @@
                         <p><strong>Effet :</strong> {{ pact.effect }}</p>
                         <p><strong>Durée :</strong> {{ pact.duration }} jours</p>
 
-                        <!-- Bouton pour accéder au paiement (décoratif pour l'instant) -->
                         <div class="card-actions justify-end">
-                            <button class="btn btn-primary">Accéder au paiement</button>
+                            <a href="{{ path('payment', {id: pact.id}) }}" class="btn btn-primary">Accéder au paiement</a>
                         </div>
                     </div>
                 </div>
