--- a/esoternet_app/templates/base.html.twig
+++ b/esoternet_app/templates/base.html.twig
@@ -9,22 +9,19 @@
 <body>
 <nav class="navbar bg-base-100 shadow-lg">
     <div class="container mx-auto flex justify-between">
-        <!-- Logo -->
         <a href="{{ path('home') }}" class="btn btn-ghost normal-case text-xl">
             <img src="/images/logo.png" alt="Logo" class="h-12" />
         </a>
 
-        <!-- Liens principaux -->
         <div class="hidden lg:flex">
             <ul class="menu menu-horizontal px-1">
                 <li><a href="{{ path('home') }}">Accueil</a></li>
                 <li><a href="/entity">Entitée</a></li>
-                <li><a href="/pacts">Pacte</a></li>
+                <li><a href="/pact">Pacte</a></li>
                 <li><a href="/contact">Contact</a></li>
             </ul>
         </div>
 
-        <!-- Menu burger pour mobile -->
         <div class="lg:hidden">
             <div class="dropdown">
                 <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -41,11 +38,9 @@
             </div>
         </div>
 
-        <!-- Switch thème clair/sombre -->
-        <label class="swap swap-rotate">
+=        <label class="swap swap-rotate">
             <input type="checkbox" class="theme-controller" id="theme-toggle" />
 
-            <!-- Icône soleil -->
             <svg
                     class="swap-off h-10 w-10 fill-current"
                     xmlns="http://www.w3.org/2000/svg"
@@ -54,7 +49,6 @@
                         d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
             </svg>
 
-            <!-- Icône lune -->
             <svg
                     class="swap-on h-10 w-10 fill-current"
                     xmlns="http://www.w3.org/2000/svg"
