--- a/esoternet_app/templates/item/show.html.twig
+++ b/esoternet_app/templates/item/show.html.twig
@@ -25,4 +25,5 @@
             <li>Aucun pacte associé</li>
         {% endfor %}
     </ul>
+    <p>Date ajoutée : {{ item.dateAdded|date('d/m/Y') }}</p>
 {% endblock %}
