--- a/esoternet_app/templates/base.html.twig
+++ b/esoternet_app/templates/base.html.twig
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-    
+    <link ref="icon" href="/images/favicon.ico" type="image/x-icon">
+
     <title>{% block title %}Shop{% endblock %}</title>
 </head>
 <body>
@@ -33,6 +34,7 @@
                     <li><a href="#" onclick="showLoginPopup(event)">À propos</a></li>
                 {% endif %}
                 {% if app.user %}
+                    <li><a href="/profil">Profil</a></li>
                     <li>
                         <form method="POST" action="{{ path('page_logout') }}">
                             <input type="hidden" name="_csrf_token" value="{{ csrf_token('logout') }}">
@@ -59,6 +61,7 @@
                         <li><a href="/items">Items</a></li>
                         <li><a href="/pact">Pacte</a></li>
                         <li><a href="/about-us propos">À propos</a></li>
+                        <li><a href="/profil">Profil</a></li>
                     {% else %}
                         <li><a href="#" onclick="showLoginPopup(event)">Entitée</a></li>
                         <li><a href="#" onclick="showLoginPopup(event)">Items</a></li>
